<resources>
    <string name="app_name">Jumpy</string>
    <string name="Play">Play</string>
    <string name="howToPlay">How to play</string>
    <string name="newGame">New Game</string>
    <string name="jumpInfo">Swipe up to jump.</string>
    <string name="move">Rotate phone to move.</string>
    <string name="obstacles">-- Obstacles to avoid --</string>
    <string name="avatarConf">Set your avatar</string>
    <string name="avatarReset">Reset</string>
    <string name="avatarSet">Take selfie</string>

    <string name="score">SCORE:</string>
    <string name="gameOver">Double tap to retry.</string>
</resources>